# challenge_instrument

./: CMakeLists.txt
main/: CMakeLists.txt  encoder.pio  motor_control.c  picow_tcp_client.c  tcp_ex.c
